--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -3,27 +3,24 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground: #2e3944;
+  --background: #d3d9d4;
+  --button-background: #748d92;
+  --button-highlight: #124e66;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground: #d3d9d4;
+    --backgroud: #212a31;
+    --button-background: #124e66;
+    --button-highlight: #748d92;
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: var(--foreground);
+  background-color: var(--backgroud);
 }
 
 @layer utilities {
@@ -32,12 +29,13 @@ body {
   }
 }
 
-.btn {
-  @apply font-bold py-2 px-4 rounded;
-}
-.btn-blue {
-  @apply bg-blue-500 text-white;
-}
-.btn-blue:hover {
-  @apply bg-blue-700;
+@layer components {
+  .btn {
+    @apply font-bold py-2 px-4 rounded;
+    background-color: var(--button-background);
+  }
+
+  .btn:hover {
+    background-color: var(--button-highlight);
+  }
 }
